--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "coverage": "node ./out/test/runTest.js --coverage",
     "vscode:prepublish": "npm run compile",
     "package": "vsce package -o secpilot.vsix",
-    "installExtension": "code --install-extension sastgemini.vsix --force"
+    "installExtension": "code --install-extension secpilot.vsix --force"
   },
   "devDependencies": {
     "@types/vscode": "^1.96.0",
